	and not alphabetically.

    o	R_LIBS_USER and R_LIBS_SITE feature possible expansion of
    	specifiers for R version specific information as part of the
    	startup process.


INSTALLATION

    o	'make check' will work with --without-iconv, to accommodate
	building on AIX where the system iconv conflicts with
	libiconv and is not compatible with R's requirements.


BUG FIXES

    o	as.dendrogram() failed on objects of class "dendrogram".

    o	plot(type ="s") (or "S") with many (hundreds of thousands)
	of points could overflow the stack.  (PR#9629)

    o	Coercing an S4 classed object to "matrix" (or other basic class)
	failed to unset the S4 bit.

    o	The 'useS4' argument of print.default() had been broken by an
	unrelated change prior to 2.4.1.  This allowed print() and
	show() to bounce badly constructed S4 objects between
	themselves indefinitely.

    o	Prediction of the seasonal component in HoltWinters() was one
	step out at one point in the calculations.

	decompose() incorrectly computed the 'random' component for a
	multiplicative fit.

    o	density(1:20, bw="SJ") now works as bw.SJ() now tries a larger
	search interval than the default (lower,upper).

    o	Wildcards work again in unlink() on Unix-alikes (they did not
	in 2.5.0).

    o	When qr() used pivoting, the coefficient names in qr.coef() were
	not pivoted to match.  (PR#9623)

    o	UseMethod() could crash R if the first argument was not a
	character string.

    o	R and Rscript on Unix-alikes were not accepting spaces in -e
	arguments (even if quoted).

    o	Hexadecimal integer constants (e.g. 0x10L) were not being
	parsed correctly on platforms where atof did not accept
	hexadecimal prefixes (as required by C99, but not implemented
	in MinGW as used by R on Windows).  (PR#9648)

    o	libRlapack.dylib on Mac OS X had no version information and
	somtimes an invalid identification name.



		CHANGES IN R VERSION 2.5.0


USER-VISIBLE CHANGES
