@@ -35,7 +35,7 @@ top_builddir = ..
 
 include $(top_builddir)/Makeconf
 
-Rsharedir = ${rsharedir}
+Rsharedir = $(DESTDIR)${rsharedir}
 Rlocaledir = $(Rsharedir)/locale
 
 mkinstalldirs = $(MKINSTALLDIRS)
